# autorally

./: README.md
autorally_control/: CMakeLists.txt
autorally_control/cfg/: LTIMPC_params.cfg  LTVMPC_params.cfg
autorally_control/include/VehicleDynamics/: vehicle_dynamics.h
autorally_control/include/autorally_control/Utilities/: Utilities.h
autorally_control/include/autorally_control/VehicleDynamics/: VehDyn.cpp  VehDyn.h
autorally_control/launch/: LTIMPC_Gazebo.launch  LTVMPC_Gazebo.launch
autorally_control/src/LTIMPC/: CMakeLists.txt  LTIMPC.cpp  LTIMPC.h  LTIMPC_main.cpp  TestLTIMPC  TestLTIMPC.cpp  VehDyn.cpp  VehDyn.h  ldl.c  matrix_support.c  solver.c  solver.h  util.c
autorally_control/src/LTVMPC/: CMakeLists.txt  LTVMPC.cpp  LTVMPC.h  LTVMPC_main.cpp  VehDyn.cpp  VehDyn.h
autorally_control/src/Map_CA/: CMakeLists.txt  Map_CA.cpp  Map_CA.h
autorally_control/src/Map_CA/Maps/Marietta/: mariettaTrackGenerator.ipynb
autorally_gazebo/launch/: autoRallyControllerSpawner.launch  autoRallyTrackGazeboSim.launch
autorally_msgs/: CMakeLists.txt
autorally_msgs/msg/: mapCA.msg
autorally_util/config/: chassisCommandPriorities.yaml
